# OpenTSR

./: .gitignore  ADOPTERS.md  AGENTS.md  ARCHITECTURE.md  BOUNDARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURES.md  IMPLEMENTATION_PLAN.md  INFRASTRUCTURE.md  MEMORY.md  PARTNERSHIPS.md  README.md  REQUIREMENTS.md  SECURITY.md  TODO.md  pytest.ini
.github/: CODEOWNERS  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: rfc.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  rfc.yml  schema_proposal.yml
.github/workflows/: deploy_docs.yml  lint_docs.yml  validate_schema.yml
adapters/: README.md  manifest.schema.json  registry.json  registry.schema.json
adapters/_template/: README.md  manifest.json
adapters/generic-ph-meter/: README.md  manifest.json
adapters/generic-ph-meter/examples/: opentsr.json  source.json
adapters/woehrsh-rm-compound-microscope/: README.md  manifest.json
docs/: RFC_TEMPLATE.md  _config.yml  adapter-hub.md  compliance.md  getting-started.md  github-setup.md  governance.md  index.md  profiles.md  reference-ingest.md  roadmap.md  spec.md  vocabulary.md
examples/: minimal_signal.json  network_intrusion.json  physical_sensor_signal.json  verify_core.py
sdk/python/: README.md  pyproject.toml
sdk/python/opentsr/: __init__.py  models.py  reference_ingest.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: index.ts
spec/: MAPPINGS_OCSF.md  MAPPINGS_OTEL.md  PROFILES.md  SEMANTICS.md  schema.json  vocabulary.md
tests/: conftest.py  test_compliance.py
(+2 files in other folders)
