[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opentsr"
version = "0.1.0"
description = "High-assurance Python SDK for OpenTSR signals"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.23.0,<5.0.0",
    "pydantic>=2.8.0,<3.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["opentsr*"]
